--- a/aacs/android/app-components/alexa-auto-voice-ui/src/main/res/values/dimens.xml
+++ b/aacs/android/app-components/alexa-auto-voice-ui/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="auto_padding_bottom">112dp</dimen>
     <dimen name="voice_chrome_bar_height">11dp</dimen>
+    <dimen name="voice_chrome_bar_margin_bottom">14dp</dimen>
 </resources>
