--- a/aacs/android/app-components/alexa-auto-voice-ui/src/main/res/layout/autovoiceinteraction_layout.xml
+++ b/aacs/android/app-components/alexa-auto-voice-ui/src/main/res/layout/autovoiceinteraction_layout.xml
@@ -19,8 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/voice_chrome_bar_height"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        android:layout_marginBottom="@dimen/voice_chrome_bar_margin_bottom"/>
+        android:orientation="vertical" />
 
     <!--  Layout for custom animation will be inserted here  -->
 
