--- a/aacs/android/app-components/alexa-auto-settings/src/main/res/layout/settings_activity_layout.xml
+++ b/aacs/android/app-components/alexa-auto-settings/src/main/res/layout/settings_activity_layout.xml
@@ -1,33 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root"
-    android:orientation="vertical"
+    android:id="@+id/root_new"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+
+    <FrameLayout
+        android:id="@+id/settings_activity_stop_music"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@android:color/transparent">
+
+    </FrameLayout>
+
+    <LinearLayout
+
+        android:id="@+id/root"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
 
         <LinearLayout
             android:id="@+id/navigation_bar_fragment"
-            android:tag="navbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="125dp"
-            android:layout_marginTop="@dimen/navigation_horizontal_margin">
-                <include
-                    android:id="@+id/navigation_bar"
-                    layout="@layout/navigation_bar_layout" />
+            android:layout_marginTop="@dimen/navigation_horizontal_margin"
+            android:tag="navbar">
+
+            <include
+                android:id="@+id/navigation_bar"
+                layout="@layout/navigation_bar_layout" />
         </LinearLayout>
 
         <androidx.fragment.app.FragmentContainerView
-            android:name="androidx.navigation.fragment.NavHostFragment"
             android:id="@+id/settings_nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginTop="@dimen/item_vertical_margin"
             android:layout_marginLeft="120dp"
+            android:layout_marginTop="@dimen/item_vertical_margin"
+            android:layout_weight="1"
             app:defaultNavHost="true" />
-</LinearLayout>
+    </LinearLayout>
+
+</FrameLayout>
